; ModuleID = '/home/carl/AnghaBench/linux/fs/nilfs2/extr_direct.c_nilfs_direct_lookup.c'
source_filename = "/home/carl/AnghaBench/linux/fs/nilfs2/extr_direct.c_nilfs_direct_lookup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nilfs_bmap = type { i32 }

@NILFS_DIRECT_KEY_MAX = common dso_local global i64 0, align 8
@ENOENT = common dso_local global i32 0, align 4
@NILFS_BMAP_INVALID_PTR = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.nilfs_bmap*, i64, i32, i64*)* @nilfs_direct_lookup to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @nilfs_direct_lookup(%struct.nilfs_bmap* %0, i64 %1, i32 %2, i64* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.nilfs_bmap*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  %9 = alloca i64*, align 8
  %10 = alloca i64, align 8
  store %struct.nilfs_bmap* %0, %struct.nilfs_bmap** %6, align 8
  store i64 %1, i64* %7, align 8
  store i32 %2, i32* %8, align 4
  store i64* %3, i64** %9, align 8
  %11 = load i64, i64* %7, align 8
  %12 = load i64, i64* @NILFS_DIRECT_KEY_MAX, align 8
  %13 = icmp sgt i64 %11, %12
  br i1 %13, label %17, label %14

14:                                               ; preds = %4
  %15 = load i32, i32* %8, align 4
  %16 = icmp ne i32 %15, 1
  br i1 %16, label %17, label %20

17:                                               ; preds = %14, %4
  %18 = load i32, i32* @ENOENT, align 4
  %19 = sub nsw i32 0, %18
  store i32 %19, i32* %5, align 4
  br label %33

20:                                               ; preds = %14
  %21 = load %struct.nilfs_bmap*, %struct.nilfs_bmap** %6, align 8
  %22 = load i64, i64* %7, align 8
  %23 = call i64 @nilfs_direct_get_ptr(%struct.nilfs_bmap* %21, i64 %22)
  store i64 %23, i64* %10, align 8
  %24 = load i64, i64* %10, align 8
  %25 = load i64, i64* @NILFS_BMAP_INVALID_PTR, align 8
  %26 = icmp eq i64 %24, %25
  br i1 %26, label %27, label %30

27:                                               ; preds = %20
  %28 = load i32, i32* @ENOENT, align 4
  %29 = sub nsw i32 0, %28
  store i32 %29, i32* %5, align 4
  br label %33

30:                                               ; preds = %20
  %31 = load i64, i64* %10, align 8
  %32 = load i64*, i64** %9, align 8
  store i64 %31, i64* %32, align 8
  store i32 0, i32* %5, align 4
  br label %33

33:                                               ; preds = %30, %27, %17
  %34 = load i32, i32* %5, align 4
  ret i32 %34
}

declare dso_local i64 @nilfs_direct_get_ptr(%struct.nilfs_bmap*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
